Details
-
Bug
-
Status: Closed (View Workflow)
-
Blocker
-
Resolution: Fixed
-
10.11, 11.4, 11.8, 12.2(EOL), 10.11.15
-
Debian 12
-
Not for Release Notes
-
Q1/2026 Server Development, Q1/2026 Server Maintenance
Description
I have a cluster of databases from a recent install that have had failing backups for about two weeks.
The backups give the following error
[15] 2025-11-12 23:01:10 Start copying aria log file tail: /db/mysql/data//aria_log.00000001
|
[09] 2025-11-12 23:01:10 aria table file ./sys/sys_config.MAI is copied successfully.
|
[09] 2025-11-12 23:01:10 aria table file ./sys/sys_config.MAD is copied successfully.
|
[00] 2025-11-12 23:01:10 ...done
|
[15] 2025-11-12 23:01:10 Stop copying aria log file tail: /db/mysql/data//aria_log.00000001, copied 19718144 bytes
|
[06] 2025-11-12 23:01:10 ...done
|
[11] 2025-11-12 23:01:11 error: aria_read index failed: 176
|
[14] 2025-11-12 23:01:11 error: aria_read index failed: 176
|
[04] 2025-11-12 23:01:11 error: aria_read index failed: 176
|
[01] 2025-11-12 23:01:11 error: aria_read index failed: 176
|
[05] 2025-11-12 23:01:11 error: aria_read index failed: 176
|
[10] 2025-11-12 23:01:11 error: aria_read index failed: 176
|
[12] 2025-11-12 23:01:11 error: aria_read index failed: 176
|
[02] 2025-11-12 23:01:11 error: aria_read index failed: 176
|
[00] 2025-11-12 23:01:11 Aria data files backup process is finished with error
|
The databases use file_key_management plugin for encryption with the following settings:
[mariadbd]
|
plugin_load_add = file_key_management
|
file_key_management_filename = /db/encryption/keyfile.enc
|
file_key_management_filekey = FILE:/db/encryption/keyfile.key
|
innodb_encrypt_tables = FORCE
|
innodb_encrypt_log = ON
|
encrypt_tmp_disk_tables = ON
|
encrypt_tmp_files = ON
|
aria_encrypt_tables = ON
|
encrypt_binlog = ON
|
While on version 10.11.15 of mariadb-server and mariadb-backup I was unable to get the error to go away with encryption on. I reloaded the databases with 10.11.15 still but without the encryption and backups ran fine. I then added encryption, ran a new backup, and the error reappeared.
After that, I downgraded to 10.11.13 and setup the database again with all of the same configuration with encryption enabled, and backups are working fine again.
I noticed some patch notes after version 10.11.13 that mentions aria table checking in the backups being changed, so might be an issue with encryption.
Attachments
Issue Links
- includes
-
MDEV-38707 Aria encryption: false HA_ERR_DECRYPTION_FAILED when key page is fully packed (off-by-one in ma_crypt_index_post_read_hook)
-
- Closed
-
- is caused by
-
MDEV-37520 Failure to detect corruption during backups of Aria table
-
- Closed
-
- is duplicated by
-
MDEV-38255 mariadb-backup fail when set aria_encrypt_tables=ON
-
- Closed
-
- relates to
-
MDEV-38336 Aria: Failed to open partially repaired table, Got error '176 "Read page with wrong checksum"', Wrong CRC on datapage at 1
-
- Open
-
-
MDEV-38727 Error 176 reading index on encrypted Aria partitioned table
-
- Open
-
-
MDEV-41057 mariadb-backup fails on encrypted partitioned Aria tables with Error 176
-
- Confirmed
-