extra/mariabackup/aria_backup_client.cc
@@ -161,7 +161,10 @@ public:
 		File m_data_file = -1;
 		MY_STAT m_data_file_stat;
 	};
-	Table() = default;
+	Table()
+        {
+          bzero(&m_cap, sizeof(m_cap));
+        }
 	Table (Table &&other) = delete;
 	Table &  operator= (Table &&other) = delete;
 	Table(const Table &) = delete;
@@ -222,6 +225,7 @@ private:
 };
 
 Table::~Table() {
+         aria_free_capabilities(&m_cap);
 	(void)close();
 }
 
@@ -298,7 +302,8 @@ bool Table::open(MYSQL *con, bool opt_no_lock, unsigned thread_num) {
 			goto exit;
 		}
 		if (!have_capabilities) {
-			if ((error= aria_get_capabilities(partition.m_index_file, &m_cap))) {
+                  if ((error= aria_get_capabilities(partition.m_index_file,
+                                                    m_full_name.c_str(), &m_cap))) {
 				msg(thread_num, "aria_get_capabilities failed: %d", error);
 				goto exit;
 			}
