storage/maria/ma_backup.c
@@ -18,6 +18,7 @@
 #include "maria_def.h"
 #include "ma_blockrec.h"                        /* PAGE_SUFFIX_SIZE */
 #include "ma_checkpoint.h"
+#include "ma_crypt.h"
 #include <aria_backup.h>
 
 /**
@@ -30,8 +31,11 @@
   @return X      errno
 */
 
-int aria_get_capabilities(File kfile, ARIA_TABLE_CAPABILITIES *cap)__attribute__((visibility("default"))) ;
-int aria_get_capabilities(File kfile, ARIA_TABLE_CAPABILITIES *cap)
+int aria_get_capabilities(File kfile, const char *table_name,
+                          ARIA_TABLE_CAPABILITIES *cap)
+  __attribute__((visibility("default"))) ;
+int aria_get_capabilities(File kfile, const char *table_name,
+                          ARIA_TABLE_CAPABILITIES *cap)
 {
   MARIA_SHARE share;
   int error= 0;
@@ -42,6 +46,7 @@ int aria_get_capabilities(File kfile, ARIA_TABLE_CAPABILITIES *cap)
   DBUG_ENTER("aria_get_capabilities");
 
   bzero(cap, sizeof(*cap));
+  bzero(&share, sizeof(share));
   if (my_pread(kfile,share.state.header.file_version, head_length, 0,
                MYF(MY_NABP)))
     DBUG_RETURN(HA_ERR_NOT_A_TABLE);
@@ -67,13 +72,14 @@ int aria_get_capabilities(File kfile, ARIA_TABLE_CAPABILITIES *cap)
     goto err;
   }
   _ma_base_info_read(disc_cache + base_pos, &share.base);
+  strmake(cap->filename, table_name, sizeof(cap->filename)-1);
   cap->transactional= share.base.born_transactional;
   cap->checksum= MY_TEST(share.options & HA_OPTION_PAGE_CHECKSUM);
   cap->online_backup_safe= cap->transactional && cap->checksum;
   cap->header_size= share.base.keystart;
   cap->keypage_header= ((share.base.born_transactional ?
-                         LSN_STORE_SIZE + TRANSID_SIZE :
-                         0) + KEYPAGE_KEYID_SIZE + KEYPAGE_FLAG_SIZE +
+                         LSN_STORE_SIZE + TRANSID_SIZE : 0) +
+                        KEYPAGE_KEYID_SIZE + KEYPAGE_FLAG_SIZE +
                         KEYPAGE_USED_SIZE);
   cap->block_size= share.base.block_size;
   cap->data_file_type= share.state.header.data_file_type;
@@ -81,10 +87,23 @@ int aria_get_capabilities(File kfile, ARIA_TABLE_CAPABILITIES *cap)
   cap->compression=    share.base.compression_algorithm;
   cap->encrypted=      MY_TEST(share.base.extra_options &
                                MA_EXTRA_OPTIONS_ENCRYPTED);
+  if (cap->encrypted)
+  {
+    share.data_file_name.str= (char*) table_name;      /* in case of error */
+    share.crypt_data= 0;
+    if (maria_read_crypt_data(kfile, &share))
+    {
+      error= HA_ERR_DECRYPTION_FAILED;
+      goto err;
+    }
+    cap->keypage_header+= ma_crypt_get_index_page_header_space(&share);
+    cap->crypt_data= share.crypt_data;
+    cap->crypt_page_header_space= ma_crypt_get_data_page_header_space();
+  }
 
   if (share.state.header.data_file_type == BLOCK_RECORD)
   {
-    /* Calulate how man pages the row bitmap covers. From _ma_bitmap_init() */
+    /* Calulate how many pages the row bitmap covers. From _ma_bitmap_init() */
     aligned_bit_blocks= (cap->block_size - PAGE_SUFFIX_SIZE) / 6;
     /*
       In each 6 bytes, we have 6*8/3 = 16 pages covered
@@ -100,8 +119,25 @@ int aria_get_capabilities(File kfile, ARIA_TABLE_CAPABILITIES *cap)
 
 err:
   my_free(disc_cache);
+  if (error)
+    aria_free_capabilities(cap);
   DBUG_RETURN(error);
 } /* aria_get_capabilities */
+
+
+void aria_free_capabilities(ARIA_TABLE_CAPABILITIES *cap)
+{
+  DBUG_ENTER("aria_free_capabilities");
+  if (cap->crypt_data)
+  {
+    MARIA_SHARE share;
+    share.crypt_data= cap->crypt_data;
+    ma_crypt_free(&share);
+    cap->crypt_data= 0;
+  }
+  DBUG_VOID_RETURN;
+}
+
 
 /****************************************************************************
 **  store MARIA_BASE_INFO
@@ -171,14 +207,14 @@ int aria_read_index(File kfile, ARIA_TABLE_CAPABILITIES *cap, ulonglong block,
                     uchar *buffer)
 {
   MARIA_SHARE share;
-  int retry= 0;
+  int retry= 0, error= 0;
   DBUG_ENTER("aria_read_index");
 
   share.keypage_header= cap->keypage_header;
   share.block_size= cap->block_size;
-  do
+
+  for (;;)
   {
-    int error;
     size_t length;
     if ((length= my_pread(kfile, buffer, cap->block_size,
                           block * cap->block_size, MYF(0))) != cap->block_size)
@@ -199,15 +235,53 @@ int aria_read_index(File kfile, ARIA_TABLE_CAPABILITIES *cap, ulonglong block,
       length= _ma_get_page_used(&share, buffer);
       if (length > cap->block_size - CRC_SIZE)
         DBUG_RETURN(HA_ERR_CRASHED);
+
+      if (cap->encrypted)
+      {
+        /* We have to decrypt block to be able to calculate checksum */
+        PAGECACHE_IO_HOOK_ARGS io_arg;
+        my_bool crypt_error;
+        io_arg.data= (void*) &share;
+        io_arg.page= buffer;
+        io_arg.crypt_buf= (uchar*) my_alloca(cap->block_size);
+        io_arg.pageno= block;
+        share.crypt_data= cap->crypt_data;
+        share.silence_encryption_errors= 1;
+        share.crypt_page_header_space= cap->crypt_page_header_space;
+        share.open_file_name.str= cap->filename;
+
+        crypt_error= ma_crypt_index_post_read_hook(0, &io_arg);
+        my_afree(io_arg.crypt_buf);
+        if (!crypt_error)
+          DBUG_RETURN(0);                       /* ok */
+        error= my_errno;
+        if (error == HA_ERR_DECRYPTION_FAILED ||
+            error == HA_ERR_WRONG_CRC)
+          goto retry;
+        break;                                  /* Give error */
+      }
+
       error= maria_page_crc_check(buffer, block, &share,
                                   MARIA_NO_CRC_NORMAL_PAGE,
                                   (int) length);
-      if (error == 0 || my_errno != HA_ERR_WRONG_CRC)
-        DBUG_RETURN(error);
+      if (error == 0)
+        DBUG_RETURN(0);
+      if ((error= my_errno) != HA_ERR_WRONG_CRC)
+        break;
+    }
+  retry:
+    if (retry++ >= MAX_RETRY)
+    {
+      error= HA_ERR_WRONG_CRC;
+      break;
     }
     my_sleep(100000);                              /* Sleep 0.1 seconds */
-  } while (retry++ < MAX_RETRY);
-  DBUG_RETURN(HA_ERR_WRONG_CRC);
+  }
+  my_printf_error(error,
+                  "Error %d reading index file %s  block %lld",
+                  MYF(ME_FATAL|ME_ERROR_LOG),
+                  error, cap->filename, block);
+  DBUG_RETURN(error);
 }
 
 
@@ -229,7 +303,7 @@ int aria_read_data(File dfile, ARIA_TABLE_CAPABILITIES *cap, ulonglong block,
                    uchar *buffer, size_t *bytes_read)
 {
   MARIA_SHARE share;
-  int retry= 0;
+  int retry= 0, error= 0;
   DBUG_ENTER("aria_read_data");
 
   share.keypage_header= cap->keypage_header;
@@ -243,11 +317,9 @@ int aria_read_data(File dfile, ARIA_TABLE_CAPABILITIES *cap, ulonglong block,
       DBUG_RETURN(HA_ERR_END_OF_FILE);
     DBUG_RETURN(*bytes_read > 0 ? 0 : (my_errno ? my_errno : -1));
   }
-
   *bytes_read= cap->block_size;
-  do
+  for (;;)
   {
-    int error;
     size_t length;
     if ((length= my_pread(dfile, buffer, cap->block_size,
                           block * cap->block_size, MYF(0))) != cap->block_size)
@@ -265,17 +337,55 @@ int aria_read_data(File dfile, ARIA_TABLE_CAPABILITIES *cap, ulonglong block,
     if (length == cap->block_size)
     {
       if (!_ma_check_if_zero(buffer, share.block_size - CRC_SIZE))
-       error= 0;
+        DBUG_RETURN(0);
+      /* Test if encrypted pages. Note that bitmap pages are not encrypted */
+      if (cap->encrypted && (block % cap->bitmap_pages_covered))
+      {
+        /* We have to decrypt block to be able to calculate checksum */
+        PAGECACHE_IO_HOOK_ARGS io_arg;
+        my_bool crypt_error;
+        io_arg.data= (void*) &share;
+        io_arg.page= buffer;
+        io_arg.crypt_buf= (uchar*) my_alloca(cap->block_size);
+        io_arg.pageno= block;
+        share.crypt_data= cap->crypt_data;
+        share.silence_encryption_errors= 1;
+        share.crypt_page_header_space= cap->crypt_page_header_space;
+        share.open_file_name.str= cap->filename;
+
+        crypt_error= ma_crypt_data_post_read_hook(0, &io_arg);
+        my_afree(io_arg.crypt_buf);
+        if (!crypt_error)
+          DBUG_RETURN(0);                       /* ok */
+        if (my_errno == HA_ERR_DECRYPTION_FAILED || my_errno== HA_ERR_WRONG_CRC)
+          goto retry;
+        error= my_errno;
+        break;
+      }
       else
+      {
         error= maria_page_crc_check(buffer, block, &share,
-                                  ((block % cap->bitmap_pages_covered) == 0 ?
-                                   MARIA_NO_CRC_BITMAP_PAGE :
-                                   MARIA_NO_CRC_NORMAL_PAGE),
-                                  share.block_size - CRC_SIZE);
-     if (error == 0 || my_errno != HA_ERR_WRONG_CRC)
-        DBUG_RETURN(error);
+                                    ((block % cap->bitmap_pages_covered) == 0 ?
+                                     MARIA_NO_CRC_BITMAP_PAGE :
+                                     MARIA_NO_CRC_NORMAL_PAGE),
+                                    share.block_size - CRC_SIZE);
+        if (error == 0)
+          DBUG_RETURN(0);
+        if ((error= my_errno) != HA_ERR_WRONG_CRC)
+          break;
+      }
+    }
+retry:
+    if (retry++ >= MAX_RETRY)
+    {
+      error= HA_ERR_WRONG_CRC;
+      break;
     }
     my_sleep(100000);                              /* Sleep 0.1 seconds */
-  } while (retry++ < MAX_RETRY);
-    DBUG_RETURN(HA_ERR_WRONG_CRC);
+  }
+  my_printf_error(error,
+                  "Error %d reading data file %s  block %lld",
+                  MYF(ME_FATAL|ME_ERROR_LOG),
+                  error, cap->filename, block);
+  DBUG_RETURN(error);
 }
